# xiraNET

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  ai review 2.txt  docker-compose.yml  prometheus.yml  rust-toolchain.toml  xiranet.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
crates/xira-auth/: Cargo.toml
crates/xira-auth/src/: jwt.rs  lib.rs  oauth2.rs  sessions.rs  users.rs
crates/xira-common/: Cargo.toml
crates/xira-common/src/: config.rs  lib.rs  models.rs  storage.rs
crates/xira-common/src/tracing_ext/: mod.rs
crates/xira-flow/: Cargo.toml
crates/xira-flow/src/: cron.rs  event_bus.rs  feature_flags.rs  lib.rs  releases.rs  workflows.rs
crates/xira-gateway/: Cargo.toml
crates/xira-gateway/src/: body_transform.rs  cache.rs  canary.rs  circuit_breaker.rs  connection_pool.rs  edge_cache.rs  health_scoring.rs  interceptors.rs  lib.rs  proxy.rs  request_replay.rs  retry.rs  transform.rs
crates/xira-ops/: Cargo.toml
crates/xira-ops/src/: advanced.rs  incidents.rs  lib.rs  log_aggregator.rs  metrics.rs  sla.rs  trace_collector.rs
crates/xira-ops/src/alerting/: channels.rs  mod.rs  webhooks.rs
crates/xira-security/: Cargo.toml
crates/xira-security/src/: audit.rs  bot_detect.rs  ip_filter.rs  lib.rs  rate_limit.rs  waf.rs
data/: xiranet.db  xiranet.db-shm  xiranet.db-wal
docs/: AUDIT-FINDINGS.md
logs/: xiranet.log.2026-03-26  xiranet.log.2026-04-02  xiranet.log.2026-05-14
observability/grafana/dashboards/: xira-gateway.json  xira-security.json
observability/grafana/provisioning/dashboards/: xira.yml
scripts/: bench.sh
src/: lib.rs  main.rs  telemetry.rs
src/admin/: config_api.rs  handlers.rs  mod.rs  openapi.rs  v2_handlers.rs
src/alerting/: channels.rs  mod.rs  url_guard.rs  webhooks.rs
src/automation/: cron.rs  event_bus.rs  mod.rs  retry.rs  workflows.rs
src/bootstrap/: mod.rs  state.rs
src/bus/: mod.rs  redis_bus.rs
src/cli/: mod.rs  token_store.rs
src/config/: mod.rs
src/dashboard/: mod.rs
src/datapipeline/: mod.rs  pipeline.rs  transforms.rs
src/dbgateway/: mod.rs  proxy.rs  query_firewall.rs
src/deployment/: feature_flags.rs  mod.rs  releases.rs
src/discovery/: mesh.rs  mod.rs
src/gateway/: cache.rs  canary.rs  circuit_breaker.rs  connection_pool.rs  edge_cache.rs  graphql.rs  health_scoring.rs  interceptors.rs  load_balancer.rs  mod.rs  proxy.rs  request_queue.rs  request_replay.rs  retry.rs  transform.rs  websocket.rs  ws_metrics.rs
src/grpc/: mod.rs
src/health/: mod.rs
src/identity/: authenticator.rs  mfa.rs  mod.rs  secret_box.rs  sessions.rs  users.rs
src/logging/: mod.rs
src/metrics/: advanced.rs  mod.rs  sla.rs  trace_collector.rs
src/middleware/: api_keys.rs  audit_log.rs  audit_sink.rs  auth.rs  bot_detect.rs  cors.rs  cors_manager.rs  geoip.rs  ip_filter.rs  jwt.rs  logger.rs  mod.rs  oauth2.rs  oauth2_gateway.rs  rate_limit.rs  redis_rate_limit.rs  require_role.rs  session.rs  tenant.rs  validation.rs  waf.rs
src/observability/: incidents.rs  log_aggregator.rs  mod.rs  uptime.rs
src/plugins/: lua_engine.rs  mod.rs
src/registry/: mod.rs  models.rs  storage.rs
src/tls/: mod.rs
src/tracing_ext/: mod.rs
src/versioning/: mod.rs
tests/: e2e_tests.rs  integration_tests.rs
