[workspace]
members = [
    ".",
    "crates/xira-common",
    "crates/xira-security",
    "crates/xira-auth",
    "crates/xira-ops",
    "crates/xira-flow",
    "crates/xira-gateway",
]
resolver = "2"

[package]
name = "xiranet"
version = "3.0.0"
edition = "2021"
description = "XIRA Platform — Modular Infrastructure Hub"
authors = ["valverde"]

[[bin]]
name = "xira"
path = "src/main.rs"

[[bin]]
name = "xiranet"
path = "src/main.rs"

[dependencies]
# XIRA Platform crates
xira-common = { path = "crates/xira-common" }
xira-security = { path = "crates/xira-security" }
xira-auth = { path = "crates/xira-auth" }
xira-ops = { path = "crates/xira-ops" }
xira-flow = { path = "crates/xira-flow" }
xira-gateway = { path = "crates/xira-gateway" }

# Web framework
actix-web = { version = "4", features = ["rustls-0_23", "compress-gzip", "compress-brotli", "compress-zstd"] }
actix-rt = "2"
actix-cors = "0.7"
actix-ws = "0.3"
actix-files = "0.6"

# HTTP client & proxy
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Concurrent data structures
dashmap = "6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Identifiers & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Utility
lazy_static = "1"
bytes = "1"
futures-util = "0.3"
async-trait = "0.1"
rand = "0.8"

# SQLite persistence
rusqlite = { version = "0.31", features = ["bundled"] }

# Config hot-reload
notify = "6"

# TLS/mTLS
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"

# Prometheus metrics
prometheus = "0.13"

# Response caching
lru = "0.12"

# JSON Schema validation
jsonschema = "0.28"

# gRPC
tonic = "0.12"
prost = "0.13"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = "0.5"

# Plugin system
libloading = "0.8"

# WebSocket client (downstream proxy)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# Redis (distributed rate limiting)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# OpenTelemetry (env-based, SDK optional)
opentelemetry = { version = "0.27", optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

# Regex (body transform)
regex = "1"
