[workspace]
# crates/ ağacı eskiden src/ paralel ağaçtı; security yamaları src/'de kaldı,
# crates/ stale fork'tu. v3.0.0'da silindi — tek truth source: src/.
members = ["."]
resolver = "2"

[package]
name = "xiranet"
version = "3.0.0"
edition = "2021"
rust-version = "1.88"
description = "XIRA Platform — Modular Infrastructure Hub"
authors = ["valverde"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/valverde/xiranet"

[[bin]]
name = "xiranet"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = { version = "4", features = ["rustls-0_23", "compress-gzip", "compress-brotli", "compress-zstd"] }
actix-rt = "2"
actix-cors = "0.7"
actix-ws = "0.3"
actix-files = "0.6"

# HTTP client & proxy
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
subtle = "2"
# Symmetric encryption — at-rest (MFA seeds, OAuth2 client secrets)
aes-gcm = "0.10"
base64 = "0.22"

# Concurrent data structures
dashmap = "6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Identifiers & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Utility
lazy_static = "1"
bytes = "1"
futures-util = "0.3"
async-trait = "0.1"
# NOTE: rand 0.8'de kalıyor çünkü argon2 0.5 password-hash 0.5 → rand_core 0.6 zinciri.
# RUSTSEC-2026-0097 sadece custom logger + rand::rng() kullanılırsa unsound; bizim
# code custom logger kurmadan rand::random() çağırıyor — geçerli değil.
rand = "0.8"

# SQLite persistence
rusqlite = { version = "0.31", features = ["bundled"] }

# Config hot-reload
notify = "6"

# TLS/mTLS
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"

# Prometheus metrics — 0.14 ile protobuf 3.x'a geçiş (RUSTSEC-2024-0437 fix)
prometheus = "0.14"

# Response caching — 0.13+ Stacked Borrows fix (RUSTSEC-2026-0002)
lru = "0.13"

# JSON Schema validation
jsonschema = "0.28"

# gRPC
tonic = "0.12"
prost = "0.13"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = "0.5"

# Plugin system
libloading = "0.8"

# WebSocket client (downstream proxy)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# Redis (distributed rate limiting)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# OpenTelemetry (env-based, SDK optional)
opentelemetry = { version = "0.27", optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

# Regex (body transform)
regex = "1"

# DNS SRV resolver (service discovery) — 0.26 fixes RUSTSEC-2026-0119 (O(n²) name encoding)
hickory-resolver = "0.26"

# Error handling
thiserror = "1"
