[package]
name = "xira-auth"
version = "3.0.0"
edition = "2021"
description = "XIRA Platform — identity, sessions, JWT, OAuth2"

[dependencies]
xira-common = { path = "../xira-common" }

# Web framework (JWT/OAuth2 middleware)
actix-web = "4"
actix-rt = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Async
tokio = { version = "1", features = ["sync"] }

# Logging
tracing = "0.1"

# Identifiers & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Concurrent data structures
dashmap = "6"

# Utility
rand = "0.8"

# HTTP client (OAuth2 token exchange)  
reqwest = { version = "0.12", features = ["json"] }
