[package]
name = "xira-flow"
version = "3.0.0"
edition = "2021"
description = "XIRA Platform — cron, event bus, workflows, feature flags, releases"

[dependencies]
xira-common = { path = "../xira-common" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["sync", "time", "rt"] }

# Logging
tracing = "0.1"

# Identifiers & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Concurrent data structures
dashmap = "6"

# HTTP client (cron job execution)
reqwest = { version = "0.12", features = ["json"] }
