[package]
name = "xira-ops"
version = "3.0.0"
edition = "2021"
description = "XIRA Platform — metrics, SLA, uptime, incidents, alerting"

[dependencies]
xira-common = { path = "../xira-common" }

# Web framework
actix-web = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["sync", "time"] }

# Logging
tracing = "0.1"

# Identifiers & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Concurrent data structures
dashmap = "6"

# Prometheus metrics
prometheus = "0.13"
lazy_static = "1"

# HTTP client (alerting webhooks)
reqwest = { version = "0.12", features = ["json"] }
