[package]
name = "xira-security"
version = "3.0.0"
edition = "2021"
description = "XIRA Platform — WAF, bot detection, audit logging, IP filter, rate limiting"

[dependencies]
xira-common = { path = "../xira-common" }

# Web framework (for middleware implementations)
actix-web = "4"
actix-rt = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["sync", "time"] }

# Logging
tracing = "0.1"

# Identifiers & time
chrono = { version = "0.4", features = ["serde"] }

# Concurrent data structures
dashmap = "6"

# Regex for WAF patterns
regex = "1"
lazy_static = "1"
